--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  easy_sidemenu: ^0.5.0
+  dio: ^5.3.4
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
