--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,25 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   syncfusion_flutter_charts: ^24.1.46+1
+  firebase_core: ^2.24.1
+  cloud_firestore: ^4.13.4
+  firebase_storage: ^11.5.4
+  firebase_messaging: ^14.7.7
+  firebase_auth: ^4.15.1
+  ionicons: ^0.2.2
+  intl: ^0.19.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_secure_storage: ^9.0.0
+  cached_network_image: ^3.3.0
+  conditional_builder_null_safety: ^0.0.6
+  animated_conditional_builder: ^0.0.5
+  flutter_advanced_switch: ^3.0.1
+  flutter_staggered_animations: ^1.1.1
+  percent_indicator: ^4.2.3
+  loading_animation_widget: ^1.2.0+4
+  syncfusion_flutter_pdfviewer: ^24.2.3
+  device_info_plus: ^9.1.2
 
 dev_dependencies:
   flutter_test:
